--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/madMonkeyz-removebg.svg" />
+    <link rel="icon" type="image/svg+xml" href="/EPlogo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- google web fonts mui -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -16,7 +16,7 @@
   href="https://fonts.googleapis.com/icon?family=Material+Icons"
 />
 
-    <title>Madmonkeyz</title>
+    <title>Emperor Polo</title>
   </head>
   <body>
     <div id="root"></div>
